bin_PROGRAMS   = tssh
dist_man_MANS  = ../doc/tssh.1

nobase_include_HEADERS   = ../include/Crypto.cpp ../include/Crypto.hpp ../include/Inet.cpp ../include/Inet.hpp ../include/Main.hpp ../include/StringUtils.cpp ../include/StringUtils.hpp ../include/Tssh.hpp ../include/Types.hpp ../include/Types.cpp  
tssh_SOURCES = Main.cpp InetImpl.cpp StringUtilsImpl.cpp Tssh.cpp CryptoImpl.cpp TypesImpl.cpp

